--- a/config/content.htm
+++ b/config/content.htm
@@ -2,9 +2,11 @@
 <p>小組倉儲:<a href="https://github.com/40823250/stage1-bg17">https://github.com/40823250/stage1-bg17</a></p>
 <p>個人倉儲與網站:<a href="https://github.com/40823250/cd2021">40823250</a>/<a href="https://40823250.github.io/cd2021/content/index.html">40823250</a></p>
 <p>                     <a href="https://github.com/40832244/cd2021">40832244</a>/<a href="https://40832244.github.io/cd2021/content/index.html">40832244</a></p>
-<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div><h1>小組work</h1>
+<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
+<h1>小組work</h1>
 <p></p>
-<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div><h2>w1</h2>
+<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
+<h2>w1</h2>
 <p><img alt="" height="231" src="/images/bfa5b6f1c42df2dcbabb03b704aacb43.jpg" width="212"/> </p>
 <div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;">小組討論挖土機  EX:地震 為甚麼挖開碎石能夠以一隻手臂就能夠做得到 還有在工作上讓一些工作者不須花很長時間在搬運上 </div>
 <div class="eJOY__extension_root_class" style="all: unset;"></div>
@@ -20,9 +22,14 @@
 <div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
 <div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
 <div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
-<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div><h1>小組video</h1>
 <div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
+<h1>小組video</h1>
+<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;">尚未上傳</div>
 <div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
 <div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
 <div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
 <div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div><h1>作品測試</h1>
+<h1>小組主題</h1>
+<p><img alt="" height="278" src="/images/1.jpg" width="510"/></p>
+<p><img alt="" height="278" src="/images/2.jpg" width="510"/></p>
+<p><img alt="" height="278" src="/images/3.jpg" width="510"/></p>
