--- a/content/w1.html
+++ b/content/w1.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='小組work.html'>小組work</a><ul class='dropdown'><li><a href='w1.html'>w1</a></li></ul><li><a href='小組video.html'>小組video</a><li><a href='作品測試.html'>作品測試</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='小組work.html'>小組work</a><ul class='dropdown'><li><a href='w1.html'>w1</a></li></ul><li><a href='小組video.html'>小組video</a><li><a href='作品測試.html'>作品測試</a><li><a href='小組主題.html'>小組主題</a></li>
                       </ul>
                 </nav>
               </div>
@@ -149,7 +149,8 @@ img.add_border {
 <div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
 <div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
 <div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
-<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div><br />小組work << <a href='小組work.html'>Previous</a> <a href='小組video.html'>Next</a> >> 小組video</div>
+<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
+<br />小組work << <a href='小組work.html'>Previous</a> <a href='小組video.html'>Next</a> >> 小組video</div>
         
     <!-- footer -->
       <div class="container">
