--- a/content/作品測試.html
+++ b/content/作品測試.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='小組work.html'>小組work</a><ul class='dropdown'><li><a href='w1.html'>w1</a></li></ul><li><a href='小組video.html'>小組video</a><li><a href='作品測試.html'>作品測試</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='小組work.html'>小組work</a><ul class='dropdown'><li><a href='w1.html'>w1</a></li></ul><li><a href='小組video.html'>小組video</a><li><a href='作品測試.html'>作品測試</a><li><a href='小組主題.html'>小組主題</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,7 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">小組video << <a href='小組video.html'>Previous</a> <br /><h1>作品測試</h1><br />小組video << <a href='小組video.html'>Previous</a> </div>
+    <div id="tipue_search_content">小組video << <a href='小組video.html'>Previous</a> <a href='小組主題.html'>Next</a> >> 小組主題<br /><h1>作品測試</h1>
+<br />小組video << <a href='小組video.html'>Previous</a> <a href='小組主題.html'>Next</a> >> 小組主題</div>
         
     <!-- footer -->
       <div class="container">
