--- a/content/小組work.html
+++ b/content/小組work.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='小組work.html'>小組work</a><ul class='dropdown'><li><a href='w1.html'>w1</a></li></ul><li><a href='小組video.html'>小組video</a><li><a href='作品測試.html'>作品測試</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='小組work.html'>小組work</a><ul class='dropdown'><li><a href='w1.html'>w1</a></li></ul><li><a href='小組video.html'>小組video</a><li><a href='作品測試.html'>作品測試</a><li><a href='小組主題.html'>小組主題</a></li>
                       </ul>
                 </nav>
               </div>
@@ -135,7 +135,8 @@ img.add_border {
         </header>
     <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='w1.html'>Next</a> >> w1<br /><h1>小組work</h1>
 <p></p>
-<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div><br />About << <a href='About.html'>Previous</a> <a href='w1.html'>Next</a> >> w1</div>
+<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
+<br />About << <a href='About.html'>Previous</a> <a href='w1.html'>Next</a> >> w1</div>
         
     <!-- footer -->
       <div class="container">
