--- a/content/小組video.html
+++ b/content/小組video.html
@@ -134,9 +134,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">w1 << <a href='w1.html'>Previous</a> <a href='作品測試.html'>Next</a> >> 作品測試<br /><h1>小組video</h1>
-<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;">尚未上傳</div>
-<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
-<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
+<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/4gsZRC58kZs" width="560"></iframe></div>
 <div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
 <div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div><br />w1 << <a href='w1.html'>Previous</a> <a href='作品測試.html'>Next</a> >> 作品測試</div>
         
