--- a/config/content.htm
+++ b/config/content.htm
@@ -24,9 +24,7 @@
 <div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
 <div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
 <h1>小組video</h1>
-<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;">尚未上傳</div>
-<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
-<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
+<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/4gsZRC58kZs" width="560"></iframe></div>
 <div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
 <div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div><h1>作品測試</h1>
 <h1>小組主題</h1>
