--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -13,7 +13,7 @@
 <div class="eJOY__extension_root_class" style="all: unset;">                           這溝思希望在測試的時候可以與預期的一樣 </div>
 <div class="eJOY__extension_root_class" style="all: unset;"></div>
 <p>                           </p>
-<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
+<h2 class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;">w2</h2>
 <div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
 <p style="padding-left: 30px;"></p>
 <div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
@@ -23,10 +23,8 @@
 <div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
 <div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
 <div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
-<h1>小組video</h1>
-<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;">尚未上傳</div>
-<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
-<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
+<div class="glot-in-popup" style="background-color: #2c2c2c; border-radius: 4px; color: #b2b2b2; font-size: 16px; padding: 4px 10px; position: absolute; text-align: center; z-index: 2147483647; left: 9px; top: 402px; display: block;"></div><h1>小組video</h1>
+<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/4gsZRC58kZs" width="560"></iframe></div>
 <div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
 <div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div><h1>作品測試</h1>
 <h1>小組主題</h1>
