--- a/content/w1.html
+++ b/content/w1.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='小組work.html'>小組work</a><ul class='dropdown'><li><a href='w1.html'>w1</a></li></ul><li><a href='小組video.html'>小組video</a><li><a href='作品測試.html'>作品測試</a><li><a href='小組主題.html'>小組主題</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='小組work.html'>小組work</a><ul class='dropdown'><li><a href='w1.html'>w1</a><li><a href='w2.html'>w2</a></li></ul><li><a href='小組video.html'>小組video</a><li><a href='作品測試.html'>作品測試</a><li><a href='小組主題.html'>小組主題</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,24 +133,14 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">小組work << <a href='小組work.html'>Previous</a> <a href='小組video.html'>Next</a> >> 小組video<br /><h1>w1</h1>
+    <div id="tipue_search_content">小組work << <a href='小組work.html'>Previous</a> <a href='w2.html'>Next</a> >> w2<br /><h1>w1</h1>
 <p><img alt="" height="231" src="./../images/bfa5b6f1c42df2dcbabb03b704aacb43.jpg" width="212"/> </p>
 <div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;">小組討論挖土機  EX:地震 為甚麼挖開碎石能夠以一隻手臂就能夠做得到 還有在工作上讓一些工作者不須花很長時間在搬運上 </div>
 <div class="eJOY__extension_root_class" style="all: unset;"></div>
 <div class="eJOY__extension_root_class" style="all: unset;">                           這溝思希望在測試的時候可以與預期的一樣 </div>
 <div class="eJOY__extension_root_class" style="all: unset;"></div>
 <p>                           </p>
-<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
-<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
-<p style="padding-left: 30px;"></p>
-<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
-<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
-<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
-<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
-<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
-<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
-<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
-<br />小組work << <a href='小組work.html'>Previous</a> <a href='小組video.html'>Next</a> >> 小組video</div>
+<br />小組work << <a href='小組work.html'>Previous</a> <a href='w2.html'>Next</a> >> w2</div>
         
     <!-- footer -->
       <div class="container">
