--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1,9 +1,8 @@
 <h1>About</h1>
 <p>小組倉儲:<a href="https://github.com/40823250/stage1-bg17">https://github.com/40823250/stage1-bg17</a></p>
 <p>個人倉儲與網站:<a href="https://github.com/40823250/cd2021">40823250</a>/<a href="https://40823250.github.io/cd2021/content/index.html">40823250</a></p>
-<p>                     <a href="https://github.com/40832244/cd2021">40832244</a>/<a href="https://40832244.github.io/cd2021/content/index.html">40832244</a></p>
-<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
-<h1>小組work</h1>
+<p>                       <a href="https://github.com/40832244/cd2021">40832244</a>/<a href="https://40832244.github.io/cd2021/content/index.html">40832244</a></p>
+<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div><h1>小組work</h1>
 <p></p>
 <div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
 <h2>w1</h2>
@@ -13,17 +12,21 @@
 <div class="eJOY__extension_root_class" style="all: unset;">                           這溝思希望在測試的時候可以與預期的一樣 </div>
 <div class="eJOY__extension_root_class" style="all: unset;"></div>
 <p>                           </p>
-<h2 class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;">w2</h2>
-<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
-<p style="padding-left: 30px;"></p>
-<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
-<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
-<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
-<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
-<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
-<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
-<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
-<div class="glot-in-popup" style="background-color: #2c2c2c; border-radius: 4px; color: #b2b2b2; font-size: 16px; padding: 4px 10px; position: absolute; text-align: center; z-index: 2147483647; left: 9px; top: 402px; display: block;"></div><h1>小組video</h1>
+<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div><h2>w2</h2>
+<p>繪圖人:40823250</p>
+<p>挖土機整體</p>
+<p><img alt="" height="256" src="/images/挖土機照片.jpg" width="470"/></p>
+<p><img alt="" height="256" src="/images/挖土機照片1.jpg" width="470"/></p>
+<p><img alt="" height="256" src="/images/挖土機照片2.jpg" width="470"/></p><h2>w3</h2>
+<p>操作人員:林晉廷 40832244 </p>
+<p><span>軟體名稱:</span><span>Coppelia Sim Edu</span></p>
+<p>第一次測試模擬 Video:模擬過程中，中軸轉太快，繼續修復問題。</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/qvcO7DQfiEI" width="560"></iframe></p>
+<p>第二次測試模擬 Video:第二次修復完轉動的速度，變成挖的動作不是預設的那樣，繼續修復。</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/Czsg0sEeNOI" width="560"></iframe>第三次測試模擬 Video:修復完，整體動作流暢度跟預設值很相近，完成度80%</p>
+<p><br/><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/8YMKscsUN_A" width="560"></iframe></p>
+<h2>w4</h2>
+<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div><h1>小組video</h1>
 <div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/4gsZRC58kZs" width="560"></iframe></div>
 <div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
 <div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div><h1>作品測試</h1>
