--- a/content/小組主題.html
+++ b/content/小組主題.html
@@ -133,11 +133,10 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='小組work.html'>Next</a> >> 小組work<br /><h1>About</h1>
-<p>小組倉儲:<a href="https://github.com/40823250/stage1-bg17">https://github.com/40823250/stage1-bg17</a></p>
-<p>個人倉儲與網站:<a href="https://github.com/40823250/cd2021">40823250</a>/<a href="https://40823250.github.io/cd2021/content/index.html">40823250</a></p>
-<p>                       <a href="https://github.com/40832244/cd2021">40832244</a>/<a href="https://40832244.github.io/cd2021/content/index.html">40832244</a></p>
-<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div><br /> <a href='小組work.html'>Next</a> >> 小組work</div>
+    <div id="tipue_search_content">小組video << <a href='小組video.html'>Previous</a> <br /><h1>小組主題</h1>
+<p><img alt="" height="278" src="./../images/1.jpg" width="510"/></p>
+<p><img alt="" height="278" src="./../images/2.jpg" width="510"/></p>
+<p><img alt="" height="278" src="./../images/3.jpg" width="510"/></p><br />小組video << <a href='小組video.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
