--- a/content/w2.html
+++ b/content/w2.html
@@ -133,11 +133,12 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='小組work.html'>Next</a> >> 小組work<br /><h1>About</h1>
-<p>小組倉儲:<a href="https://github.com/40823250/stage1-bg17">https://github.com/40823250/stage1-bg17</a></p>
-<p>個人倉儲與網站:<a href="https://github.com/40823250/cd2021">40823250</a>/<a href="https://40823250.github.io/cd2021/content/index.html">40823250</a></p>
-<p>                       <a href="https://github.com/40832244/cd2021">40832244</a>/<a href="https://40832244.github.io/cd2021/content/index.html">40832244</a></p>
-<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div><br /> <a href='小組work.html'>Next</a> >> 小組work</div>
+    <div id="tipue_search_content">w1 << <a href='w1.html'>Previous</a> <a href='w3.html'>Next</a> >> w3<br /><h1>w2</h1>
+<p>繪圖人:40823250</p>
+<p>挖土機整體</p>
+<p><img alt="" height="256" src="./../images/挖土機照片.jpg" width="470"/></p>
+<p><img alt="" height="256" src="./../images/挖土機照片1.jpg" width="470"/></p>
+<p><img alt="" height="256" src="./../images/挖土機照片2.jpg" width="470"/></p><br />w1 << <a href='w1.html'>Previous</a> <a href='w3.html'>Next</a> >> w3</div>
         
     <!-- footer -->
       <div class="container">
