--- a/content/w3.html
+++ b/content/w3.html
@@ -133,11 +133,15 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='小組work.html'>Next</a> >> 小組work<br /><h1>About</h1>
-<p>小組倉儲:<a href="https://github.com/40823250/stage1-bg17">https://github.com/40823250/stage1-bg17</a></p>
-<p>個人倉儲與網站:<a href="https://github.com/40823250/cd2021">40823250</a>/<a href="https://40823250.github.io/cd2021/content/index.html">40823250</a></p>
-<p>                       <a href="https://github.com/40832244/cd2021">40832244</a>/<a href="https://40832244.github.io/cd2021/content/index.html">40832244</a></p>
-<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div><br /> <a href='小組work.html'>Next</a> >> 小組work</div>
+    <div id="tipue_search_content">w2 << <a href='w2.html'>Previous</a> <a href='w4.html'>Next</a> >> w4<br /><h1>w3</h1>
+<p>操作人員:林晉廷 40832244 </p>
+<p><span>軟體名稱:</span><span>Coppelia Sim Edu</span></p>
+<p>第一次測試模擬 Video:模擬過程中，中軸轉太快，繼續修復問題。</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/qvcO7DQfiEI" width="560"></iframe></p>
+<p>第二次測試模擬 Video:第二次修復完轉動的速度，變成挖的動作不是預設的那樣，繼續修復。</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/Czsg0sEeNOI" width="560"></iframe>第三次測試模擬 Video:修復完，整體動作流暢度跟預設值很相近，完成度80%</p>
+<p><br/><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/8YMKscsUN_A" width="560"></iframe></p>
+<br />w2 << <a href='w2.html'>Previous</a> <a href='w4.html'>Next</a> >> w4</div>
         
     <!-- footer -->
       <div class="container">
