--- a/content/w4.html
+++ b/content/w4.html
@@ -133,11 +133,13 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='小組work.html'>Next</a> >> 小組work<br /><h1>About</h1>
-<p>小組倉儲:<a href="https://github.com/40823250/stage1-bg17">https://github.com/40823250/stage1-bg17</a></p>
-<p>個人倉儲與網站:<a href="https://github.com/40823250/cd2021">40823250</a>/<a href="https://40823250.github.io/cd2021/content/index.html">40823250</a></p>
-<p>                       <a href="https://github.com/40832244/cd2021">40832244</a>/<a href="https://40832244.github.io/cd2021/content/index.html">40832244</a></p>
-<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div><br /> <a href='小組work.html'>Next</a> >> 小組work</div>
+    <div id="tipue_search_content">w3 << <a href='w3.html'>Previous</a> <a href='小組video.html'>Next</a> >> 小組video<br /><h1>w4</h1>
+<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">17組產品總結</span></span></p>
+<p><span>張哲瑀(40823250)  主要負責:</span>倉儲、小組網站 繪圖 </p>
+<p><span>林晉廷(40832244)  主要負責:Coppelia</span>模擬 PDF製作 </p>
+<p>影片:</p>
+<p></p>
+<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div><br />w3 << <a href='w3.html'>Previous</a> <a href='小組video.html'>Next</a> >> 小組video</div>
         
     <!-- footer -->
       <div class="container">
