--- a/content/小組video.html
+++ b/content/小組video.html
@@ -133,11 +133,11 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='小組work.html'>Next</a> >> 小組work<br /><h1>About</h1>
-<p>小組倉儲:<a href="https://github.com/40823250/stage1-bg17">https://github.com/40823250/stage1-bg17</a></p>
-<p>個人倉儲與網站:<a href="https://github.com/40823250/cd2021">40823250</a>/<a href="https://40823250.github.io/cd2021/content/index.html">40823250</a></p>
-<p>                       <a href="https://github.com/40832244/cd2021">40832244</a>/<a href="https://40832244.github.io/cd2021/content/index.html">40832244</a></p>
-<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div><br /> <a href='小組work.html'>Next</a> >> 小組work</div>
+    <div id="tipue_search_content">w4 << <a href='w4.html'>Previous</a> <a href='小組主題.html'>Next</a> >> 小組主題<br /><h1>小組video</h1>
+<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/4gsZRC58kZs" width="560"></iframe></div>
+<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
+<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
+<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div><br />w4 << <a href='w4.html'>Previous</a> <a href='小組主題.html'>Next</a> >> 小組主題</div>
         
     <!-- footer -->
       <div class="container">
