--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -34,8 +34,8 @@
 <div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div><h1>小組video</h1>
 <div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/4gsZRC58kZs" width="560"></iframe></div>
 <div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
-<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div><h1>作品測試</h1>
-<h1>小組主題</h1>
+<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
+<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div><h1>小組主題</h1>
 <p><img alt="" height="278" src="/images/1.jpg" width="510"/></p>
 <p><img alt="" height="278" src="/images/2.jpg" width="510"/></p>
 <p><img alt="" height="278" src="/images/3.jpg" width="510"/></p>
