--- a/content/w3.html
+++ b/content/w3.html
@@ -139,9 +139,10 @@ img.add_border {
 <p>第一次測試模擬 Video:模擬過程中，中軸轉太快，繼續修復問題。</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/qvcO7DQfiEI" width="560"></iframe></p>
 <p>第二次測試模擬 Video:第二次修復完轉動的速度，變成挖的動作不是預設的那樣，繼續修復。</p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/Czsg0sEeNOI" width="560"></iframe>第三次測試模擬 Video:修復完，整體動作流暢度跟預設值很相近，完成度80%</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/Czsg0sEeNOI" width="560"></iframe></p>
+<p>第三次測試模擬 Video:修復完，整體動作流暢度跟預設值很相近，完成度80%</p>
 <p><br/><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/8YMKscsUN_A" width="560"></iframe></p>
-<br />w2 << <a href='w2.html'>Previous</a> <a href='w4.html'>Next</a> >> w4</div>
+<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div><br />w2 << <a href='w2.html'>Previous</a> <a href='w4.html'>Next</a> >> w4</div>
         
     <!-- footer -->
       <div class="container">
