--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1,34 +1,41 @@
 <h1>About</h1>
-<p>小組倉儲:<a href="https://github.com/40823250/stage1-bg17">https://github.com/40823250/stage1-bg17</a></p>
-<p>個人倉儲與網站:<a href="https://github.com/40823250/cd2021">40823250</a>/<a href="https://40823250.github.io/cd2021/content/index.html">40823250</a></p>
-<p>                       <a href="https://github.com/40832244/cd2021">40832244</a>/<a href="https://40832244.github.io/cd2021/content/index.html">40832244</a></p>
+<p>小組倉儲:</p>
+<p><a href="https://github.com/40823250/stage1-bg17">https://github.com/40823250/stage1-bg17</a></p>
+<p>個人倉儲與網站:</p>
+<p><a href="https://github.com/40823250/cd2021">40823250</a>/<a href="https://40823250.github.io/cd2021/content/index.html">40823250</a></p>
+<p><a href="https://github.com/40832244/cd2021">40832244</a>/<a href="https://40832244.github.io/cd2021/content/index.html">40832244</a></p>
 <div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div><h1>小組work</h1>
 <p></p>
 <div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
 <h2>w1</h2>
 <p><img alt="" height="231" src="/images/bfa5b6f1c42df2dcbabb03b704aacb43.jpg" width="212"/> </p>
-<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;">小組討論挖土機  EX:地震 為甚麼挖開碎石能夠以一隻手臂就能夠做得到 還有在工作上讓一些工作者不須花很長時間在搬運上 </div>
-<div class="eJOY__extension_root_class" style="all: unset;"></div>
-<div class="eJOY__extension_root_class" style="all: unset;">                           這溝思希望在測試的時候可以與預期的一樣 </div>
+<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;">小組討論挖土機  EX:地震 為甚麼挖開碎石能夠以一隻手臂就能夠做得到 還有在工作上讓一些工作者不須花很長時間在搬運上這構思希望在測試的時候可以與預期的一樣 </div>
 <div class="eJOY__extension_root_class" style="all: unset;"></div>
 <p>                           </p>
 <div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div><h2>w2</h2>
-<p>繪圖人:40823250</p>
-<p>挖土機整體</p>
+<p>主題:<span>挖土機</span></p>
+<p>繪圖人:40823250 張哲瑀</p>
+<p><span>軟體名稱:Inventor 2020</span></p>
+<p><a href="https://github.com/40823250/stage1-bg17/raw/main/downloads/%E7%B5%84%E5%90%881(%E6%9B%B4).iam">組合圖檔下載</a></p>
 <p><img alt="" height="256" src="/images/挖土機照片.jpg" width="470"/></p>
 <p><img alt="" height="256" src="/images/挖土機照片1.jpg" width="470"/></p>
-<p><img alt="" height="256" src="/images/挖土機照片2.jpg" width="470"/></p><h2>w3</h2>
-<p>操作人員:林晉廷 40832244 </p>
+<p><img alt="" height="256" src="/images/挖土機照片2.jpg" width="470"/></p>
+<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div><h2>w3</h2>
+<p>操作人員:40832244 <span>林晉廷</span></p>
 <p><span>軟體名稱:</span><span>Coppelia Sim Edu</span></p>
 <p>第一次測試模擬 Video:模擬過程中，中軸轉太快，繼續修復問題。</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/qvcO7DQfiEI" width="560"></iframe></p>
 <p>第二次測試模擬 Video:第二次修復完轉動的速度，變成挖的動作不是預設的那樣，繼續修復。</p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/Czsg0sEeNOI" width="560"></iframe>第三次測試模擬 Video:修復完，整體動作流暢度跟預設值很相近，完成度80%</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/Czsg0sEeNOI" width="560"></iframe></p>
+<p></p>
+<p>第三次測試模擬 Video:修復完，整體動作流暢度跟預設值很相近，完成度80%</p>
 <p><br/><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/8YMKscsUN_A" width="560"></iframe></p>
-<h2>w4</h2>
+<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div><h2>w4</h2>
 <p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">17組產品總結</span></span></p>
 <p><span>張哲瑀(40823250)  主要負責:</span>倉儲、小組網站 繪圖 </p>
 <p><span>林晉廷(40832244)  主要負責:Coppelia</span>模擬 PDF製作 </p>
+<p>PDF:</p>
+<p>Reveal:<a href="https://40823250.github.io/stage1-bg17/reveal/index.html#/">2021-協同產品設計實習-stage1-bg17</a></p>
 <p>影片:</p>
 <p></p>
 <div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div><h1>小組video</h1>
