--- a/content/w2.html
+++ b/content/w2.html
@@ -134,11 +134,14 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">w1 << <a href='w1.html'>Previous</a> <a href='w3.html'>Next</a> >> w3<br /><h1>w2</h1>
-<p>繪圖人:40823250</p>
-<p>挖土機整體</p>
+<p>主題:<span>挖土機</span></p>
+<p>繪圖人:40823250 張哲瑀</p>
+<p><span>軟體名稱:Inventor 2020</span></p>
+<p><a href="https://github.com/40823250/stage1-bg17/raw/main/downloads/%E7%B5%84%E5%90%881(%E6%9B%B4).iam">組合圖檔下載</a></p>
 <p><img alt="" height="256" src="./../images/挖土機照片.jpg" width="470"/></p>
 <p><img alt="" height="256" src="./../images/挖土機照片1.jpg" width="470"/></p>
-<p><img alt="" height="256" src="./../images/挖土機照片2.jpg" width="470"/></p><br />w1 << <a href='w1.html'>Previous</a> <a href='w3.html'>Next</a> >> w3</div>
+<p><img alt="" height="256" src="./../images/挖土機照片2.jpg" width="470"/></p>
+<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div><br />w1 << <a href='w1.html'>Previous</a> <a href='w3.html'>Next</a> >> w3</div>
         
     <!-- footer -->
       <div class="container">
