--- a/content/w4.html
+++ b/content/w4.html
@@ -137,6 +137,8 @@ img.add_border {
 <p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">17組產品總結</span></span></p>
 <p><span>張哲瑀(40823250)  主要負責:</span>倉儲、小組網站 繪圖 </p>
 <p><span>林晉廷(40832244)  主要負責:Coppelia</span>模擬 PDF製作 </p>
+<p>PDF:</p>
+<p>Reveal:<a href="https://40823250.github.io/stage1-bg17/reveal/index.html#/">2021-協同產品設計實習-stage1-bg17</a></p>
 <p>影片:</p>
 <p></p>
 <div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div><br />w3 << <a href='w3.html'>Previous</a> <a href='小組video.html'>Next</a> >> 小組video</div>
