--- a/content/w1.html
+++ b/content/w1.html
@@ -134,10 +134,10 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">小組work << <a href='小組work.html'>Previous</a> <a href='w2.html'>Next</a> >> w2<br /><h1>w1</h1>
+<p>專題題目:挖土機</p>
 <p><img alt="" height="231" src="./../images/bfa5b6f1c42df2dcbabb03b704aacb43.jpg" width="212"/> </p>
-<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;">小組討論挖土機  EX:地震 為甚麼挖開碎石能夠以一隻手臂就能夠做得到 還有在工作上讓一些工作者不須花很長時間在搬運上 </div>
-<div class="eJOY__extension_root_class" style="all: unset;"></div>
-<div class="eJOY__extension_root_class" style="all: unset;">                           這溝思希望在測試的時候可以與預期的一樣 </div>
+<p>動機:</p>
+<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;">小組討論挖土機  EX:地震 為甚麼挖開碎石能夠以一隻手臂就能夠做得到 還有在工作上讓一些工作者不須花很長時間在搬運上這構思希望在測試的時候可以與預期的一樣 </div>
 <div class="eJOY__extension_root_class" style="all: unset;"></div>
 <p>                           </p>
 <div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div><br />小組work << <a href='小組work.html'>Previous</a> <a href='w2.html'>Next</a> >> w2</div>
