--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -4,7 +4,8 @@
 <p>個人倉儲與網站:</p>
 <p><a href="https://github.com/40823250/cd2021">40823250</a>/<a href="https://40823250.github.io/cd2021/content/index.html">40823250</a></p>
 <p><a href="https://github.com/40832244/cd2021">40832244</a>/<a href="https://40832244.github.io/cd2021/content/index.html">40832244</a></p>
-<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div><h1>小組work</h1>
+<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
+<h1>小組work</h1>
 <p></p>
 <div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
 <h2>w1</h2>
@@ -14,7 +15,8 @@
 <div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;">小組討論挖土機  EX:地震 為甚麼挖開碎石能夠以一隻手臂就能夠做得到 還有在工作上讓一些工作者不須花很長時間在搬運上這構思希望在測試的時候可以與預期的一樣 </div>
 <div class="eJOY__extension_root_class" style="all: unset;"></div>
 <p>                           </p>
-<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div><h2>w2</h2>
+<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
+<h2>w2</h2>
 <p>主題:<span>挖土機</span></p>
 <p>繪圖人:40823250 張哲瑀</p>
 <p><span>軟體名稱:Inventor 2020</span></p>
@@ -22,7 +24,8 @@
 <p><img alt="" height="256" src="/images/挖土機照片.jpg" width="470"/></p>
 <p><img alt="" height="256" src="/images/挖土機照片1.jpg" width="470"/></p>
 <p><img alt="" height="256" src="/images/挖土機照片2.jpg" width="470"/></p>
-<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div><h2>w3</h2>
+<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
+<h2>w3</h2>
 <p>操作人員:40832244 <span>林晉廷</span></p>
 <p><span>軟體名稱:</span><span>Coppelia Sim Edu</span></p>
 <p>第一次測試模擬 Video:模擬過程中，中軸轉太快，繼續修復問題。</p>
@@ -32,19 +35,23 @@
 <p></p>
 <p>第三次測試模擬 Video:修復完，整體動作流暢度跟預設值很相近，完成度80%</p>
 <p><br/><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/8YMKscsUN_A" width="560"></iframe></p>
-<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div><h2>w4</h2>
+<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
+<h2>w4</h2>
 <p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">17組產品總結</span></span></p>
 <p><span>張哲瑀(40823250)  主要負責:</span>倉儲、小組網站 繪圖 </p>
 <p><span>林晉廷(40832244)  主要負責:Coppelia</span>模擬 PDF製作 </p>
-<p>PDF:</p>
+<p>PDF:<a href="https://40823250.github.io/stage1-bg17/downloads/%E5%8D%94%E5%90%8C%E7%94%A2%E5%93%81%E8%A8%AD%E8%A8%88%E5%AF%A6%E7%BF%92.pdf">2021-協同產品設計實習-stage1-bg17</a></p>
 <p>Reveal:<a href="https://40823250.github.io/stage1-bg17/reveal/index.html#/">2021-協同產品設計實習-stage1-bg17</a></p>
 <p>影片:</p>
-<p></p>
-<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div><h1>小組video</h1>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/6S7sGAOvBeY" width="560"></iframe></p>
+<h1>小組video</h1>
 <div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/4gsZRC58kZs" width="560"></iframe></div>
 <div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
 <div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
-<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div><h1>小組主題</h1>
+<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
+<h1>小組主題</h1>
 <p><img alt="" height="278" src="/images/1.jpg" width="510"/></p>
 <p><img alt="" height="278" src="/images/2.jpg" width="510"/></p>
 <p><img alt="" height="278" src="/images/3.jpg" width="510"/></p>
+<p></p>
+<h2>w5</h2>
