--- a/content/w1.html
+++ b/content/w1.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='小組work.html'>小組work</a><ul class='dropdown'><li><a href='w1.html'>w1</a><li><a href='w2.html'>w2</a><li><a href='w3.html'>w3</a><li><a href='w4.html'>w4</a></li></ul><li><a href='小組video.html'>小組video</a><li><a href='小組主題.html'>小組主題</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='小組work.html'>小組work</a><ul class='dropdown'><li><a href='w1.html'>w1</a><li><a href='w2.html'>w2</a><li><a href='w3.html'>w3</a><li><a href='w4.html'>w4</a></li></ul><li><a href='小組video.html'>小組video</a><li class='has-children'><a href='小組主題.html'>小組主題</a><ul class='dropdown'><li><a href='w5.html'>w5</a></li>
                       </ul>
                 </nav>
               </div>
@@ -140,7 +140,8 @@ img.add_border {
 <div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;">小組討論挖土機  EX:地震 為甚麼挖開碎石能夠以一隻手臂就能夠做得到 還有在工作上讓一些工作者不須花很長時間在搬運上這構思希望在測試的時候可以與預期的一樣 </div>
 <div class="eJOY__extension_root_class" style="all: unset;"></div>
 <p>                           </p>
-<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div><br />小組work << <a href='小組work.html'>Previous</a> <a href='w2.html'>Next</a> >> w2</div>
+<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
+<br />小組work << <a href='小組work.html'>Previous</a> <a href='w2.html'>Next</a> >> w2</div>
         
     <!-- footer -->
       <div class="container">
