--- a/config/content.htm
+++ b/config/content.htm
@@ -4,7 +4,8 @@
 <p>個人倉儲與網站:</p>
 <p><a href="https://github.com/40823250/cd2021">40823250</a>/<a href="https://40823250.github.io/cd2021/content/index.html">40823250</a></p>
 <p><a href="https://github.com/40832244/cd2021">40832244</a>/<a href="https://40832244.github.io/cd2021/content/index.html">40832244</a></p>
-<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div><h1>小組work</h1>
+<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
+<h1>小組work</h1>
 <p></p>
 <div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
 <h2>w1</h2>
@@ -14,7 +15,8 @@
 <div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;">小組討論挖土機  EX:地震 為甚麼挖開碎石能夠以一隻手臂就能夠做得到 還有在工作上讓一些工作者不須花很長時間在搬運上這構思希望在測試的時候可以與預期的一樣 </div>
 <div class="eJOY__extension_root_class" style="all: unset;"></div>
 <p>                           </p>
-<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div><h2>w2</h2>
+<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
+<h2>w2</h2>
 <p>主題:<span>挖土機</span></p>
 <p>繪圖人:40823250 張哲瑀</p>
 <p><span>軟體名稱:Inventor 2020</span></p>
@@ -22,7 +24,8 @@
 <p><img alt="" height="256" src="/images/挖土機照片.jpg" width="470"/></p>
 <p><img alt="" height="256" src="/images/挖土機照片1.jpg" width="470"/></p>
 <p><img alt="" height="256" src="/images/挖土機照片2.jpg" width="470"/></p>
-<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div><h2>w3</h2>
+<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
+<h2>w3</h2>
 <p>操作人員:40832244 <span>林晉廷</span></p>
 <p><span>軟體名稱:</span><span>Coppelia Sim Edu</span></p>
 <p>第一次測試模擬 Video:模擬過程中，中軸轉太快，繼續修復問題。</p>
@@ -32,18 +35,232 @@
 <p></p>
 <p>第三次測試模擬 Video:修復完，整體動作流暢度跟預設值很相近，完成度80%</p>
 <p><br/><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/8YMKscsUN_A" width="560"></iframe></p>
-<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div><h2>w4</h2>
+<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
+<h2>w4</h2>
 <p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">17組產品總結</span></span></p>
 <p><span>張哲瑀(40823250)  主要負責:</span>倉儲、小組網站 繪圖 </p>
 <p><span>林晉廷(40832244)  主要負責:Coppelia</span>模擬 PDF製作 </p>
 <p>PDF:<a href="https://40823250.github.io/stage1-bg17/downloads/%E5%8D%94%E5%90%8C%E7%94%A2%E5%93%81%E8%A8%AD%E8%A8%88%E5%AF%A6%E7%BF%92.pdf">2021-協同產品設計實習-stage1-bg17</a></p>
 <p>Reveal:<a href="https://40823250.github.io/stage1-bg17/reveal/index.html#/">2021-協同產品設計實習-stage1-bg17</a></p>
 <p>影片:</p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/6S7sGAOvBeY" width="560"></iframe></p><h1>小組video</h1>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/6S7sGAOvBeY" width="560"></iframe></p>
+<h1>小組video</h1>
 <div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/4gsZRC58kZs" width="560"></iframe></div>
 <div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
 <div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
-<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div><h1>小組主題</h1>
+<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
+<h1>小組主題</h1>
 <p><img alt="" height="278" src="/images/1.jpg" width="510"/></p>
 <p><img alt="" height="278" src="/images/2.jpg" width="510"/></p>
 <p><img alt="" height="278" src="/images/3.jpg" width="510"/></p>
+<p></p>
+<h2>w5</h2>
+<p><a href='/&lt;iframe width="560" height="315" src="https:/www.youtube.com/embed/CrvowCq0A5Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen&gt;&lt;/iframe&gt;'>2021-協同產品設計實習-stage1-bg17 專題報告影片</a></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/CrvowCq0A5Y" title="YouTube video player" width="560"></iframe></p>
+<table border="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse; width: 240pt;" width="320">
+<tbody>
+<tr height="22" style="height: 16.2pt;">
+<td class="xl65" height="22" style="height: 16.2pt; width: 48pt;" width="64">AG</td>
+<td style="width: 48pt;" width="64"></td>
+<td style="width: 48pt;" width="64"></td>
+<td style="width: 48pt;" width="64">BG</td>
+<td style="width: 48pt;" width="64"></td>
+</tr>
+<tr height="22" style="height: 16.2pt;">
+<td align="right" height="22" style="height: 16.2pt;">1</td>
+<td align="right" class="xl65">03:40</td>
+<td></td>
+<td align="right">1</td>
+<td align="right" class="xl65">07:14</td>
+</tr>
+<tr height="22" style="height: 16.2pt;">
+<td align="right" height="22" style="height: 16.2pt;">2</td>
+<td align="right" class="xl65">03:04</td>
+<td></td>
+<td align="right">2</td>
+<td align="right" class="xl65">01:55</td>
+</tr>
+<tr height="22" style="height: 16.2pt;">
+<td align="right" height="22" style="height: 16.2pt;">3</td>
+<td align="right" class="xl65">02:24</td>
+<td></td>
+<td align="right">3</td>
+<td align="right" class="xl65">01:58</td>
+</tr>
+<tr height="22" style="height: 16.2pt;">
+<td align="right" height="22" style="height: 16.2pt;">4</td>
+<td align="right" class="xl65">03:19</td>
+<td></td>
+<td align="right">4</td>
+<td align="right" class="xl65">02:51</td>
+</tr>
+<tr height="22" style="height: 16.2pt;">
+<td align="right" height="22" style="height: 16.2pt;">5</td>
+<td align="right" class="xl65">03:38</td>
+<td></td>
+<td align="right">5</td>
+<td align="right" class="xl65">03:00</td>
+</tr>
+<tr height="22" style="height: 16.2pt;">
+<td align="right" height="22" style="height: 16.2pt;">6</td>
+<td align="right" class="xl65">05:50</td>
+<td></td>
+<td align="right">6</td>
+<td align="right" class="xl65">03:07</td>
+</tr>
+<tr height="22" style="height: 16.2pt;">
+<td align="right" height="22" style="height: 16.2pt;">7</td>
+<td align="right" class="xl65">02:26</td>
+<td></td>
+<td align="right">7</td>
+<td align="right" class="xl65">02:47</td>
+</tr>
+<tr height="22" style="height: 16.2pt;">
+<td align="right" height="22" style="height: 16.2pt;">8</td>
+<td align="right" class="xl65">01:33</td>
+<td></td>
+<td align="right">8</td>
+<td align="right" class="xl65">03:25</td>
+</tr>
+<tr height="22" style="height: 16.2pt;">
+<td align="right" height="22" style="height: 16.2pt;">9</td>
+<td align="right" class="xl65">01:18</td>
+<td></td>
+<td align="right">9</td>
+<td align="right" class="xl65">02:43</td>
+</tr>
+<tr height="22" style="height: 16.2pt;">
+<td align="right" height="22" style="height: 16.2pt;">10</td>
+<td align="right" class="xl65">03:08</td>
+<td></td>
+<td align="right">10</td>
+<td align="right" class="xl65">02:20</td>
+</tr>
+<tr height="22" style="height: 16.2pt;">
+<td align="right" height="22" style="height: 16.2pt;">11</td>
+<td align="right" class="xl65">01:04</td>
+<td></td>
+<td align="right">11</td>
+<td align="right" class="xl65">01:38</td>
+</tr>
+<tr height="22" style="height: 16.2pt;">
+<td align="right" height="22" style="height: 16.2pt;">12</td>
+<td align="right" class="xl65">01:59</td>
+<td></td>
+<td align="right">12</td>
+<td align="right" class="xl65">01:47</td>
+</tr>
+<tr height="22" style="height: 16.2pt;">
+<td align="right" height="22" style="height: 16.2pt;">13</td>
+<td align="right" class="xl65">02:17</td>
+<td></td>
+<td align="right">13</td>
+<td align="right" class="xl65">02:09</td>
+</tr>
+<tr height="22" style="height: 16.2pt;">
+<td align="right" height="22" style="height: 16.2pt;">14</td>
+<td align="right" class="xl65">02:31</td>
+<td></td>
+<td align="right">14</td>
+<td align="right" class="xl65">05:58</td>
+</tr>
+<tr height="22" style="height: 16.2pt;">
+<td align="right" height="22" style="height: 16.2pt;">15</td>
+<td align="right" class="xl65">00:50</td>
+<td></td>
+<td align="right">15</td>
+<td align="right" class="xl65">03:24</td>
+</tr>
+<tr height="22" style="height: 16.2pt;">
+<td align="right" height="22" style="height: 16.2pt;">16</td>
+<td align="right" class="xl65">01:09</td>
+<td></td>
+<td align="right">16</td>
+<td align="right" class="xl65">03:33</td>
+</tr>
+<tr height="22" style="height: 16.2pt;">
+<td align="right" height="22" style="height: 16.2pt;">17</td>
+<td align="right" class="xl65">02:31</td>
+<td></td>
+<td align="right">17</td>
+<td align="right" class="xl65">04:33</td>
+</tr>
+<tr height="22" style="height: 16.2pt;">
+<td align="right" height="22" style="height: 16.2pt;">18</td>
+<td align="right" class="xl65">01:57</td>
+<td></td>
+<td align="right">18</td>
+<td align="right" class="xl65">05:03</td>
+</tr>
+<tr height="22" style="height: 16.2pt;">
+<td align="right" height="22" style="height: 16.2pt;">19</td>
+<td align="right" class="xl65">02:19</td>
+<td></td>
+<td align="right">19</td>
+<td align="right" class="xl65">03:11</td>
+</tr>
+<tr height="22" style="height: 16.2pt;">
+<td align="right" height="22" style="height: 16.2pt;">20</td>
+<td align="right" class="xl65">04:06</td>
+<td></td>
+<td align="right">20</td>
+<td align="right" class="xl65">03:32</td>
+</tr>
+<tr height="22" style="height: 16.2pt;">
+<td align="right" height="22" style="height: 16.2pt;">21</td>
+<td align="right" class="xl65">02:20</td>
+<td></td>
+<td align="right">21</td>
+<td align="right" class="xl65">05:02</td>
+</tr>
+<tr height="22" style="height: 16.2pt;">
+<td align="right" height="22" style="height: 16.2pt;">22</td>
+<td align="right" class="xl65">05:13</td>
+<td></td>
+<td align="right">22</td>
+<td align="right" class="xl65">04:47</td>
+</tr>
+<tr height="22" style="height: 16.2pt;">
+<td align="right" height="22" style="height: 16.2pt;">23</td>
+<td align="right" class="xl65">08:19</td>
+<td></td>
+<td align="right">23</td>
+<td align="right" class="xl65">02:55</td>
+</tr>
+<tr height="22" style="height: 16.2pt;">
+<td height="22" style="height: 16.2pt;"></td>
+<td class="xl65"></td>
+<td></td>
+<td align="right">24</td>
+<td align="right" class="xl65">05:00</td>
+</tr>
+<tr height="22" style="height: 16.2pt;">
+<td height="22" style="height: 16.2pt;"></td>
+<td class="xl65"></td>
+<td></td>
+<td align="right">25</td>
+<td align="right" class="xl65">04:53</td>
+</tr>
+<tr height="22" style="height: 16.2pt;">
+<td height="22" style="height: 16.2pt;"></td>
+<td></td>
+<td></td>
+<td align="right">26</td>
+<td></td>
+</tr>
+<tr height="22" style="height: 16.2pt;">
+<td height="22" style="height: 16.2pt;"></td>
+<td></td>
+<td></td>
+<td align="right">27</td>
+<td align="right" class="xl65">03:43</td>
+</tr>
+<tr height="22" style="height: 16.2pt;">
+<td height="22" style="height: 16.2pt;"></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+</tr>
+</tbody>
+</table>
