--- a/content/w2.html
+++ b/content/w2.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='小組work.html'>小組work</a><ul class='dropdown'><li><a href='w1.html'>w1</a><li><a href='w2.html'>w2</a><li><a href='w3.html'>w3</a><li><a href='w4.html'>w4</a></li></ul><li><a href='小組video.html'>小組video</a><li><a href='小組主題.html'>小組主題</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='小組work.html'>小組work</a><ul class='dropdown'><li><a href='w1.html'>w1</a><li><a href='w2.html'>w2</a><li><a href='w3.html'>w3</a><li><a href='w4.html'>w4</a></li></ul><li><a href='小組video.html'>小組video</a><li class='has-children'><a href='小組主題.html'>小組主題</a><ul class='dropdown'><li><a href='w5.html'>w5</a></li>
                       </ul>
                 </nav>
               </div>
@@ -141,7 +141,8 @@ img.add_border {
 <p><img alt="" height="256" src="./../images/挖土機照片.jpg" width="470"/></p>
 <p><img alt="" height="256" src="./../images/挖土機照片1.jpg" width="470"/></p>
 <p><img alt="" height="256" src="./../images/挖土機照片2.jpg" width="470"/></p>
-<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div><br />w1 << <a href='w1.html'>Previous</a> <a href='w3.html'>Next</a> >> w3</div>
+<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
+<br />w1 << <a href='w1.html'>Previous</a> <a href='w3.html'>Next</a> >> w3</div>
         
     <!-- footer -->
       <div class="container">
