--- a/content/w3.html
+++ b/content/w3.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='小組work.html'>小組work</a><ul class='dropdown'><li><a href='w1.html'>w1</a><li><a href='w2.html'>w2</a><li><a href='w3.html'>w3</a><li><a href='w4.html'>w4</a></li></ul><li><a href='小組video.html'>小組video</a><li><a href='小組主題.html'>小組主題</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='小組work.html'>小組work</a><ul class='dropdown'><li><a href='w1.html'>w1</a><li><a href='w2.html'>w2</a><li><a href='w3.html'>w3</a><li><a href='w4.html'>w4</a></li></ul><li><a href='小組video.html'>小組video</a><li class='has-children'><a href='小組主題.html'>小組主題</a><ul class='dropdown'><li><a href='w5.html'>w5</a></li>
                       </ul>
                 </nav>
               </div>
@@ -143,7 +143,8 @@ img.add_border {
 <p></p>
 <p>第三次測試模擬 Video:修復完，整體動作流暢度跟預設值很相近，完成度80%</p>
 <p><br/><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/8YMKscsUN_A" width="560"></iframe></p>
-<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div><br />w2 << <a href='w2.html'>Previous</a> <a href='w4.html'>Next</a> >> w4</div>
+<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
+<br />w2 << <a href='w2.html'>Previous</a> <a href='w4.html'>Next</a> >> w4</div>
         
     <!-- footer -->
       <div class="container">
