--- a/config/content.htm
+++ b/config/content.htm
@@ -44,16 +44,7 @@
 <p>Reveal:<a href="https://40823250.github.io/stage1-bg17/reveal/index.html#/">2021-協同產品設計實習-stage1-bg17</a></p>
 <p>影片:</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/6S7sGAOvBeY" width="560"></iframe></p>
-<h1>小組video</h1>
-<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/4gsZRC58kZs" width="560"></iframe></div>
 <div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
-<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
-<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
-<h1>小組主題</h1>
-<p><img alt="" height="278" src="/images/1.jpg" width="510"/></p>
-<p><img alt="" height="278" src="/images/2.jpg" width="510"/></p>
-<p><img alt="" height="278" src="/images/3.jpg" width="510"/></p>
-<p></p>
 <h2>w5</h2>
 <p><a href='/&lt;iframe width="560" height="315" src="https:/www.youtube.com/embed/CrvowCq0A5Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen&gt;&lt;/iframe&gt;'>2021-協同產品設計實習-stage1-bg17 專題報告影片</a></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/CrvowCq0A5Y" title="YouTube video player" width="560"></iframe></p>
@@ -264,3 +255,13 @@
 </tr>
 </tbody>
 </table>
+<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div><h1>小組video</h1>
+<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/4gsZRC58kZs" width="560"></iframe></div>
+<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
+<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
+<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
+<h1>小組主題</h1>
+<p><img alt="" height="278" src="/images/1.jpg" width="510"/></p>
+<p><img alt="" height="278" src="/images/2.jpg" width="510"/></p>
+<p><img alt="" height="278" src="/images/3.jpg" width="510"/></p>
+<p></p>
