--- a/content/w4.html
+++ b/content/w4.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='小組work.html'>小組work</a><ul class='dropdown'><li><a href='w1.html'>w1</a><li><a href='w2.html'>w2</a><li><a href='w3.html'>w3</a><li><a href='w4.html'>w4</a></li></ul><li><a href='小組video.html'>小組video</a><li class='has-children'><a href='小組主題.html'>小組主題</a><ul class='dropdown'><li><a href='w5.html'>w5</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='小組work.html'>小組work</a><ul class='dropdown'><li><a href='w1.html'>w1</a><li><a href='w2.html'>w2</a><li><a href='w3.html'>w3</a><li><a href='w4.html'>w4</a><li><a href='w5.html'>w5</a></li></ul><li><a href='小組video.html'>小組video</a><li><a href='小組主題.html'>小組主題</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,7 +133,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w3 << <a href='w3.html'>Previous</a> <a href='小組video.html'>Next</a> >> 小組video<br /><h1>w4</h1>
+    <div id="tipue_search_content">w3 << <a href='w3.html'>Previous</a> <a href='w5.html'>Next</a> >> w5<br /><h1>w4</h1>
 <p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">17組產品總結</span></span></p>
 <p><span>張哲瑀(40823250)  主要負責:</span>倉儲、小組網站 繪圖 </p>
 <p><span>林晉廷(40832244)  主要負責:Coppelia</span>模擬 PDF製作 </p>
@@ -141,7 +141,8 @@ img.add_border {
 <p>Reveal:<a href="https://40823250.github.io/stage1-bg17/reveal/index.html#/">2021-協同產品設計實習-stage1-bg17</a></p>
 <p>影片:</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/6S7sGAOvBeY" width="560"></iframe></p>
-<br />w3 << <a href='w3.html'>Previous</a> <a href='小組video.html'>Next</a> >> 小組video</div>
+<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
+<br />w3 << <a href='w3.html'>Previous</a> <a href='w5.html'>Next</a> >> w5</div>
         
     <!-- footer -->
       <div class="container">
