--- a/content/w5.html
+++ b/content/w5.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='小組work.html'>小組work</a><ul class='dropdown'><li><a href='w1.html'>w1</a><li><a href='w2.html'>w2</a><li><a href='w3.html'>w3</a><li><a href='w4.html'>w4</a></li></ul><li><a href='小組video.html'>小組video</a><li class='has-children'><a href='小組主題.html'>小組主題</a><ul class='dropdown'><li><a href='w5.html'>w5</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='小組work.html'>小組work</a><ul class='dropdown'><li><a href='w1.html'>w1</a><li><a href='w2.html'>w2</a><li><a href='w3.html'>w3</a><li><a href='w4.html'>w4</a><li><a href='w5.html'>w5</a></li></ul><li><a href='小組video.html'>小組video</a><li><a href='小組主題.html'>小組主題</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,7 +133,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">小組主題 << <a href='小組主題.html'>Previous</a> <br /><h1>w5</h1>
+    <div id="tipue_search_content">w4 << <a href='w4.html'>Previous</a> <a href='小組video.html'>Next</a> >> 小組video<br /><h1>w5</h1>
 <p><a href='/&lt;iframe width="560" height="315" src="https:/www.youtube.com/embed/CrvowCq0A5Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen&gt;&lt;/iframe&gt;'>2021-協同產品設計實習-stage1-bg17 專題報告影片</a></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/CrvowCq0A5Y" title="YouTube video player" width="560"></iframe></p>
 <table border="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse; width: 240pt;" width="320">
@@ -342,7 +342,8 @@ img.add_border {
 <td></td>
 </tr>
 </tbody>
-</table><br />小組主題 << <a href='小組主題.html'>Previous</a> </div>
+</table>
+<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div><br />w4 << <a href='w4.html'>Previous</a> <a href='小組video.html'>Next</a> >> 小組video</div>
         
     <!-- footer -->
       <div class="container">
