--- a/content/小組video.html
+++ b/content/小組video.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='小組work.html'>小組work</a><ul class='dropdown'><li><a href='w1.html'>w1</a><li><a href='w2.html'>w2</a><li><a href='w3.html'>w3</a><li><a href='w4.html'>w4</a></li></ul><li><a href='小組video.html'>小組video</a><li class='has-children'><a href='小組主題.html'>小組主題</a><ul class='dropdown'><li><a href='w5.html'>w5</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='小組work.html'>小組work</a><ul class='dropdown'><li><a href='w1.html'>w1</a><li><a href='w2.html'>w2</a><li><a href='w3.html'>w3</a><li><a href='w4.html'>w4</a><li><a href='w5.html'>w5</a></li></ul><li><a href='小組video.html'>小組video</a><li><a href='小組主題.html'>小組主題</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,12 +133,12 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w4 << <a href='w4.html'>Previous</a> <a href='小組主題.html'>Next</a> >> 小組主題<br /><h1>小組video</h1>
+    <div id="tipue_search_content">w5 << <a href='w5.html'>Previous</a> <a href='小組主題.html'>Next</a> >> 小組主題<br /><h1>小組video</h1>
 <div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/4gsZRC58kZs" width="560"></iframe></div>
 <div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
 <div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
 <div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
-<br />w4 << <a href='w4.html'>Previous</a> <a href='小組主題.html'>Next</a> >> 小組主題</div>
+<br />w5 << <a href='w5.html'>Previous</a> <a href='小組主題.html'>Next</a> >> 小組主題</div>
         
     <!-- footer -->
       <div class="container">
