--- a/content/小組主題.html
+++ b/content/小組主題.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='小組work.html'>小組work</a><ul class='dropdown'><li><a href='w1.html'>w1</a><li><a href='w2.html'>w2</a><li><a href='w3.html'>w3</a><li><a href='w4.html'>w4</a></li></ul><li><a href='小組video.html'>小組video</a><li class='has-children'><a href='小組主題.html'>小組主題</a><ul class='dropdown'><li><a href='w5.html'>w5</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='小組work.html'>小組work</a><ul class='dropdown'><li><a href='w1.html'>w1</a><li><a href='w2.html'>w2</a><li><a href='w3.html'>w3</a><li><a href='w4.html'>w4</a><li><a href='w5.html'>w5</a></li></ul><li><a href='小組video.html'>小組video</a><li><a href='小組主題.html'>小組主題</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,12 +133,12 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">小組video << <a href='小組video.html'>Previous</a> <a href='w5.html'>Next</a> >> w5<br /><h1>小組主題</h1>
+    <div id="tipue_search_content">小組video << <a href='小組video.html'>Previous</a> <br /><h1>小組主題</h1>
 <p><img alt="" height="278" src="./../images/1.jpg" width="510"/></p>
 <p><img alt="" height="278" src="./../images/2.jpg" width="510"/></p>
 <p><img alt="" height="278" src="./../images/3.jpg" width="510"/></p>
 <p></p>
-<br />小組video << <a href='小組video.html'>Previous</a> <a href='w5.html'>Next</a> >> w5</div>
+<br />小組video << <a href='小組video.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
